--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 
       {% if site.github.private != true and site.github.license %}
       <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
-        
+        <p><a href="http://bermaguilocalpost.org/copyright">&copy; Copyright</a></p>
       </div>
       {% endif %}
     </div>
