--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,15 @@
     <link rel="icon" type="image/x-icon" href="https://blpdelivery.github.io/brand/logo/logo-transparent.PNG">
   </head>
   <body>
+    <nav>
+      <!-- Side navigation -->
+      <div class="sidenav">
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Clients</a>
+        <a href="#">Contact</a>
+      </div>
+    </nav>
     <div class="container-lg px-3 my-5 markdown-body">
       <h1><a href="{{ "/" | absolute_url }}">BLP Brand Guidelines &amp; Resources</a></h1>
 
