--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,7 @@
         <a href="#">Contact</a>
       </div>
     </nav>
+    <div class="main">
     <div class="container-lg px-3 my-5 markdown-body">
       <h1><a href="{{ "/" | absolute_url }}">BLP Brand Guidelines &amp; Resources</a></h1>
 
@@ -30,6 +31,7 @@
         <p><a href="http://bermaguilocalpost.org/copyright">&copy; Copyright</a></p>
       </div>
       {% endif %}
+    </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors.add();</script>
