--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
         <a href="#">Contact</a>
       </div>
     </nav>
-    <div class="main">
+    <div id="main">
     <div class="container-lg px-3 my-5 markdown-body">
       <h1><a href="{{ "/" | absolute_url }}">BLP Brand Guidelines &amp; Resources</a></h1>
 
