--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@
   </head>
   <body>
     <nav>
-      <!-- Side navigation -->
-      <div class="sidenav">
+      <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="#">About</a>
         <a href="#">Services</a>
         <a href="#">Clients</a>
