--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,6 +71,17 @@
         <a href="#">Clients</a>
         <a href="#">Contact</a>
       </div>
+      <script>
+        /* Set the width of the side navigation to 250px */
+        function openNav() {
+          document.getElementById("mySidenav").style.width = "250px";
+        }
+
+        /* Set the width of the side navigation to 0 */
+        function closeNav() {
+          document.getElementById("mySidenav").style.width = "0";
+        }
+      </script>
     </nav>
     <div id="main">
     <div class="container-lg px-3 my-5 markdown-body">
