--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,19 @@
         <a href="#news">News</a>
         <a href="#contact">Contact</a>
       </div>
+      <script>
+        // When the user scrolls down 20px from the top of the document, slide down the navbar
+// When the user scrolls to the top of the page, slide up the navbar (50px out of the top view)
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    document.getElementById("navbar").style.top = "0";
+  } else {
+    document.getElementById("navbar").style.top = "-50px";
+  }
+}
+      </script>
     </nav>
     <div id="main">
     <div class="container-lg px-3 my-5 markdown-body">
