--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@ function scrollFunction() {
     </nav>
     <div id="main">
     <div class="container-lg px-3 my-5 markdown-body">
-      <h1><span onclick="openNav()">Menu</span><a href="{{ "/" | absolute_url }}">BLP Brand Guidelines &amp; Resources</a></h1>
+      <h1><a href="{{ "/" | absolute_url }}">BLP Brand Guidelines &amp; Resources</a></h1>
 
       {{ content }}
 
