--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,9 @@ function scrollFunction() {
     document.getElementById("navbar").style.top = "-50px";
   }
 }
+function openNav() {
+  document.getElementById("navbar").style.width = "0";
+}
       </script>
     </nav>
     <div id="main">
