--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,14 +53,11 @@ function scrollFunction() {
     document.getElementById("navbar").style.top = "-50px";
   }
 }
-function openNav() {
-  document.getElementById("navbar").style.width = "0";
-}
       </script>
     </nav>
     <div id="main">
     <div class="container-lg px-3 my-5 markdown-body">
-      <h1><span onclick="openNav()">Menu</span><a href="{{ "/" | absolute_url }}">BLP Brand Guidelines &amp; Resources</a></h1>
+      <h1><a href="{{ "/" | absolute_url }}">BLP Brand Guidelines &amp; Resources</a></h1>
 
       {{ content }}
 
