--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/x-icon" href="https://blpdelivery.github.io/brand/logo/logo-transparent.PNG">
     <style>
       #navbar {
-  background-color: #333; /* Black background color */
+  background-color: #000; /* Black background color */
   position: fixed; /* Make it stick/fixed */
   top: -50px; /* Hide the navbar 50 px outside of the top view */
   width: 100%; /* Full width */
@@ -29,8 +29,9 @@
 }
 
 #navbar a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: #f36e32;
+  color: white;
+  text-decoration: bold;
 }
     </style>
   </head>
