--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/x-icon" href="https://blpdelivery.github.io/brand/logo/logo-transparent.PNG">
     <style>
       #navbar {
-  background-color: #000; /* Black background color */
+  background-color: #fff; /* Black background color */
   position: fixed; /* Make it stick/fixed */
   top: -50px; /* Hide the navbar 50 px outside of the top view */
   width: 100%; /* Full width */
@@ -22,7 +22,7 @@
 #navbar a {
   float: left;
   display: block;
-  color: white;
+  color: black;
   text-align: center;
   padding: 15px;
   text-decoration: none;
