--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@ function scrollFunction() {
 }
       </script>
     </nav>
-    <div id="main">
+    <div class="main">
     <div class="container-lg px-3 my-5 markdown-body">
       <h1><a href="{{ "/" | absolute_url }}">BLP Brand Guidelines &amp; Resources</a></h1>
 
