--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
   text-decoration: bold;
 }
 
-main {
+#main {
   margin-top: 50px;
 }
     </style>
@@ -47,7 +47,7 @@ main {
         <a href="#contact">Contact</a>
       </div>
     </nav>
-    <div class="main">
+    <div id="main">
     <div class="container-lg px-3 my-5 markdown-body">
       <h1><a href="{{ "/" | absolute_url }}">BLP Brand Guidelines &amp; Resources</a></h1>
 
