--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 
 /* Style the navbar links */
 #navbar a {
-  float: left;
+  float: right;
   display: block;
   color: black;
   text-align: center;
@@ -34,6 +34,10 @@
   text-decoration: bold;
 }
 
+#navbar a.title {
+  float: left;
+}
+
 #main {
   margin-top: 50px;
 }
@@ -42,6 +46,7 @@
   <body>
     <nav>
       <div id="navbar">
+        <a class="title" href="{{ "/" | absolute_url }}">BLP Brand</a>
         <a href="#home">Home</a>
         <a href="#news">News</a>
         <a href="#contact">Contact</a>
