--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,6 +65,14 @@
       {% endif %}
     </div>
     </div>
+    <script>
+      if ($(window).width() < 1125) {
+   alert('This site is designed for larger screens.');
+}
+else {
+   
+}
+    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors.add();</script>
   </body>
