--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,9 +47,7 @@
     <nav>
       <div id="navbar">
         <a class="title" href="{{ "/" | absolute_url }}">BLP Brand</a>
-        <a href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
+        <a href="https://blpdelivery.github.io/brand/logo">Logo</a>
       </div>
     </nav>
     <div id="main">
