--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
     </nav>
     <div id="main">
     <div class="container-lg px-3 my-5 markdown-body">
-      <h1><a href="{{ "/" | absolute_url }}">BLP Brand Guidelines &amp; Resources</a></h1>
+      <h1><a style="text-align:center" href="{{ "/" | absolute_url }}">BLP Brand Guidelines &amp; Resources</a></h1>
 
       {{ content }}
 
