--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,7 @@
       <div id="navbar">
         <a class="title" href="{{ "/" | absolute_url }}">BLP Brand</a>
         <a href="https://blpdelivery.github.io/brand/logo">Logo</a>
+        <a href="https://blpdelivery.github.io/brand/motto-and-slogan">Motto & Slogan</a>
       </div>
     </nav>
     <div id="main">
@@ -66,14 +67,6 @@
       {% endif %}
     </div>
     </div>
-    <script>
-      if ($(window).width() < 1125) {
-   alert('This site is designed for larger screens.');
-}
-else {
-   
-}
-    </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors.add();</script>
   </body>
