--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,47 +11,24 @@
     <link rel="icon" type="image/x-icon" href="https://blpdelivery.github.io/brand/logo/logo-transparent.PNG">
     <style>
       #navbar {
-  background-color: #fff; /* Black background color */
-  position: fixed; /* Make it stick/fixed */
-  top: 0px; /* Hide the navbar 50 px outside of the top view */
-  width: 100%; /* Full width */
-  transition: top 0.3s; /* Transition effect when sliding down (and up) */
-}
-
-/* Style the navbar links */
-#navbar a {
-  float: right;
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 15px;
-  text-decoration: none;
-}
-
-#navbar a:hover {
-  background-color: #f36e32;
-  color: white;
-  text-decoration: bold;
-}
-
-#navbar a.title {
-  float: left;
-}
-
-#main {
-  margin-top: 50px;
-}
-      a.title {
-        text-align: center;
+        height: 100%;
+        width: 200px;
+        position: fixed;
+        left: 0;
+        top: 0;
       }
     </style>
   </head>
   <body>
+    <header>
+      <h1><button onclick="openNav()"></button><a class="title" href="{{ "/" | absolute_url }}">BLP Brand</a></h1>
+    </header>
     <nav>
       <div id="navbar">
-        <a class="title" href="{{ "/" | absolute_url }}">BLP Brand</a>
+        <button onclick="closeNav()"></button>
         <a href="https://blpdelivery.github.io/brand/logo">Logo</a>
         <a href="https://blpdelivery.github.io/brand/motto-and-slogan">Motto & Slogan</a>
+        <a href="https://blpdelivery.github.io/brand/fonts">Fonts</a>
       </div>
     </nav>
     <div id="main">
@@ -69,5 +46,14 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors.add();</script>
+    <script>
+      function closeNav() {
+        document.getElementById("navbar").style.width = 0px;
+      }
+
+      function openNav() {
+        document.getElementById("navbar").style.width = 200px;
+      }
+    </script>
   </body>
 </html>
